Bug 1059519. Relax assertion. r=mstange

--HG--
extra : commitid : 3juxKjI2Tv4
extra : rebase_source : 440f5dfacd13757cbd83931b7f059ee9c4edd827